test_regress/t/t_func_wide_out_bad.out
%Error: t/t_func_wide_out_bad.v:16: Unsupported: Function output argument 'data' requires 4352 bits, but connection's VARREF 'msg' generates 4350 bits.
%Error: Exiting due to
